tester/src/test/aya/failure/syntax/issue156.aya.txt
In file $FILE:4:11 ->

  2 |              (f : \Pi A B -> C)
  3 |              (p : \Sig A ** B) : C
  4 |   => f p.1 p.2
                 ^^
  
Error: Parser error: extraneous input 'p' expecting {<EOF>, '\def', '\struct', '\data', '\module', '\open', '\import', '\public', '\private'}
Parsing interrupted due to errors.
What are you doing?
